# FireVox

./: .clangd  .gitignore  CMakeLists.txt  README.md
FireVoxEngine/: CMakeLists.txt
FireVoxEngine/src/: main.cpp
FireVoxEngine/src/Common/Application/: Config.hpp
FireVoxEngine/src/Common/Application/Interfaces/: IApp.hpp
FireVoxEngine/src/Utils/: Log.hpp
FireVoxLib/: CMakeLists.txt
FireVoxLib/include/: FireVoxLib.hpp
FireVoxLib/include/FireVoxLib/: result.hpp  types.hpp
cmake/: EnableCCache.cmake  GraphicsLibs.cmake  LibsCaching.cmake  LoggingLibs.cmake
